--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Coinz App</title>
 	<script src="cordova.js"></script>
+	<script src="http://debug.phonegap.com/target/target-script-min.js#anonymous"></script>
 </head>
 <body>
 Hi there!
